test/domains/diten/domainReassignChangeStridedness.good
domainReassignChangeStridedness.chpl:8: error: assigning to a domain with strideKind.one from a domain with strideKind.positive without an explicit cast
